[project]
name = "mlab-pyprotos"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "disal", email = "disal@admin.git"},
]

readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
generate_runner = "python -m grpc_tools.protoc -I=src/protos --python_out=src/mlab_pyprotos --grpc_python_out=src/mlab_pyprotos src/protos/runner.proto"
generate_results = "python -m grpc_tools.protoc -I=src/protos --python_out=src/mlab_pyprotos --grpc_python_out=src/mlab_pyprotos src/protos/results.proto"
generate = { composite = ["generate_runner", "generate_results"] }